--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 altair==4.2.2
 attrs==23.1.0
-emojis==1.6.0
+emojis==1.5.0  # Mengganti versi 1.6.0 karena tidak tersedia
 entrypoints==0.4
 jinja2==3.1.2
 jsonschema==4.17.3
