--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,19 @@ emojis==1.5.0  # Mengganti versi 1.6.0 karena tidak tersedia
 entrypoints==0.4
 jinja2==3.1.2
 jsonschema==4.17.3
-numpy==1.24.3
-pandas==1.3.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
 toolz==0.12.0
 tzdata==2023.3
-streamlit==1.4.0
 nltk==3.6.3
 scikit-learn==1.0.1
 tensorflow==2.7.0
+nltk==3.6.3
+pandas==1.3.3
+streamlit==1.3.0
+numpy==1.21.2
+indoNLP==0.0.9
+scikit-learn==0.24.2
+keras==2.6.0
