--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ attrs==23.1.0
 entrypoints==0.4
 jinja2==3.1.2
 jsonschema==4.17.3
-pyrsistent==0.19.3
+pyrsistent==0.19.
+emojis>=1.6.0
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
