--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,12 @@ toolz==0.12.0
 tzdata==2023.3
 nltk==3.6.3
 scikit-learn==1.0.1
-tensorflow==2.7.0
+tensorflow==2.6.0
 nltk==3.6.3
 pandas==1.3.3
 streamlit==1.3.0
 numpy==1.21.2
 indoNLP==0.3.4
 scikit-learn==1.0.1
-keras==2.6.0
+keras>=2.7.0rc0,<2.8
+
