--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ tensorflow==2.6.0
 nltk==3.6.3
 pandas==1.3.3
 streamlit==1.3.0
-numpy==1.21.2
+numpy>=1.19.2
 indoNLP==0.3.4
 scikit-learn==1.0.1
 keras>=2.7.0rc0,<2.8
