--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyrsistent==0.19.3
 emojis==0.7.0
 python-dateutil==2.8.2
 pytz==2023.3
-six==1.16.0
+six>=1.15.0
 toolz==0.12.0
 tzdata==2023.3
 nltk==3.6.3
