--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 click==7.1.2
 protobuf==3.20.3
 altair==4.2.2
@@ -27,6 +26,7 @@ MarkupSafe==2.1.1
 matplotlib==3.6.2
 more-itertools==9.0.0
 numpy==1.25.0
+nltk==3.6.5
 packaging==21.3
 pandas==1.5.1
 Pillow==9.3.0
