--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ gitdb==4.0.9
 GitPython==3.1.29
 htbuilder==0.6.1
 idna==3.4
+indoNLP==0.0.9
 importlib-metadata==5.0.0
 Jinja2==3.1.2
 joblib==1.2.0
