--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,12 @@ importlib-metadata==5.0.0
 Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.0
+keras==2.6.0
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 more-itertools==9.0.0
-numpy==1.25.0
+numpy>=1.18.5,<1.26.0
 nltk==3.6.5
 packaging==21.3
 pandas==1.5.1
@@ -44,7 +45,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 rich==12.6.0
 scikit-learn==0.24.2
-scipy==1.9.3
+scipy>=1.7.3
 semver==2.13.0
 smmap==5.0.0
 st-annotated-text==3.0.0
