--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 more-itertools==9.0.0
-numpy>=1.18.5,<1.26.0
+numpy~=1.19.2
 nltk==3.6.5
 packaging==21.3
 pandas==1.5.1
