--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 commonmark==0.9.1
-contourpy==1.0.6
+contourpy>=1.16
 cycler==0.11.0
 decorator==5.1.1
 entrypoints==0.4
@@ -25,12 +25,12 @@ jsonschema==4.17.0
 keras==2.6.0
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
-matplotlib==3.6.2
+matplotlib>=1.19
 more-itertools==9.0.0
 numpy~=1.19.2
 nltk==3.6.5
 packaging==21.3
-pandas==1.5.1
+pandas>=1.20.3
 Pillow==9.3.0
 protobuf==3.20.3
 pyarrow==10.0.0
