--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 commonmark==0.9.1
-contourpy>=1.20
+contourpy<=1.20
 cycler==0.11.0
 decorator==5.1.1
 entrypoints==0.4
