--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ scipy>=1.7.3
 semver==2.13.0
 smmap==5.0.0
 st-annotated-text==3.0.0
-streamlit>=3.10.0.0
+streamlit==1.29.0
 streamlit-camera-input-live==0.2.0
 streamlit-embedcode==0.1.2
 streamlit-extras==0.2.2
