--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ tornado==6.2
 typing_extensions==4.4.0
 tzdata==2022.6
 tzlocal==4.2
-tensorflow~=3.7.4
+tensorflow==2.15.0
 urllib3==1.26.12
 validators==0.20.0
 watchdog==2.1.9
