--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib>=1.19
 more-itertools==9.0.0
-numpy~=1.19.2
+numpy~=1.19.2*
 nltk==3.6.5
 packaging==21.3
 pandas>=1.20.3
