--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,75 @@
-click==7.1.2
-protobuf==3.20.3
-altair==4.2.2
-attrs==22.1.0
-blinker==1.5
-cachetools==5.2.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
-commonmark==0.9.1
-contourpy<=1.20
-cycler==0.11.0
-decorator==5.1.1
-entrypoints==0.4
-Faker==15.3.2
-fonttools==4.38.0
-gitdb==4.0.9
-GitPython==3.1.29
-htbuilder==0.6.1
-idna==3.4
-indoNLP==0.3.4
-importlib-metadata==5.0.0
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.0
-keras==2.15.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib>=1.19
-more-itertools==9.0.0
-numpy>=1.19.3,<2.0.0  # Penyesuaian versi numpy
-nltk==3.6.5
-packaging==21.3
-pandas>=1.20.3
-Pillow==9.3.0
-protobuf==3.20.3
-pyarrow==10.0.0
-pydeck==0.8.0
-Pygments==2.13.0
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.2
-python-dateutil==2.8.2
-pytz==2022.6
-pytz-deprecation-shim==0.1.0.post0
-requests==2.28.1
-rich==12.6.0
-scikit-learn==0.24.2
-scipy>=1.7.3
-semver==2.13.0
-smmap==5.0.0
-st-annotated-text==3.0.0
-streamlit==1.29.0
-streamlit-camera-input-live==0.2.0
-streamlit-embedcode==0.1.2
-streamlit-extras==0.2.2
-streamlit-faker==0.0.2
-streamlit-keyup==0.2.0
-streamlit-option-menu==0.3.2
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==1.0.2
-threadpoolctl==3.1.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-typing_extensions==4.4.0
-tzdata==2022.6
-tzlocal==4.2
-tensorflow==2.15.0
-urllib3==1.26.12
-validators==0.20.0
-watchdog==2.1.9
-zipp==3.10.0
-plotly==5.11.0
-plotly.express==0.4.1
+click
+protobuf
+altair
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+commonmark
+contourpy
+cycler
+decorator
+entrypoints
+Faker
+fonttools
+gitdb
+GitPython
+htbuilder
+idna
+indoNLP
+importlib-metadata
+Jinja2
+joblib
+jsonschema
+keras
+kiwisolver
+MarkupSafe
+matplotlib
+more-itertools
+numpy
+nltk
+packaging
+pandas
+Pillow
+protobuf
+pyarrow
+pydeck
+Pygments
+Pympler
+pyparsing
+pyrsistent
+python-dateutil
+pytz
+pytz-deprecation-shim
+requests
+rich
+scikit-learn
+scipy
+semver
+smmap
+st-annotated-text
+streamlit
+streamlit-camera-input-live
+streamlit-embedcode
+streamlit-extras
+streamlit-faker
+streamlit-keyup
+streamlit-option-menu
+streamlit-toggle-switch
+streamlit-vertical-slider
+threadpoolctl
+toml
+toolz
+tornado
+typing_extensions
+tzdata
+tzlocal
+tensorflow
+urllib3
+validators
+watchdog
+zipp
+plotly
+plotly.express
 
